--- a/Bilinguals/Views/Home/Index.cshtml
+++ b/Bilinguals/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
     ViewBag.Title = "Trang chủ";
     var searchText = Request.QueryString["SearchText"];
     Layout = "~/Views/Shared/_Layout.cshtml";
+    PagedList.IPagedList<Bilinguals.Domain.Models.Dialog> dialogs = ViewBag.dialogs;
 }
 <link href="~/Content/css/home-index.css" rel="stylesheet" />
 
@@ -25,11 +26,7 @@
     </form>
 </div>
 
-
-
-
-
-@if (Model.Count > 0)
+@if (Model.Count > 0 || dialogs?.Count > 0)
 {
     <div class="row gx-5">
 
@@ -40,12 +37,12 @@
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-dialog-tab" data-bs-toggle="pill" data-bs-target="#pills-dialog" type="button" role="tab" aria-controls="pills-dialog" aria-selected="false">Search by Dialog</button>
             </li>
-            <li class="nav-item" role="presentation">
+            @*<li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Search by Irregular Verbs</button>
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Search by My Vocabulary</button>
-            </li>
+            </li>*@
         </ul>
         <div class="tab-content" id="pills-tabContent">
 
@@ -61,12 +58,13 @@
                                     <span class="vitext mb-2">&emsp;<i class="bi bi-arrow-return-right me-2"></i>@item.ViText</span>
                                     <span class="timeupdated">&emsp;&emsp;&ensp;&nbsp;<i class="bi bi-clock me-1"></i>Last updated on @(!item.DateModified.HasValue ? null : item.DateModified?.ToString("dd/MM/yyyy"))</span>
                                     <span class="dialogname">&emsp;&emsp;<i class="bi bi-card-list me-2"></i>@item.DialogName</span>
-                                    <span>.</span>
+                                    <span></span>
                                 </td>
-                                <td class="col-4">
-                                    <div class="btn-group dropstart">
-                                        <button type="button" data-sentenceid="@item.Id" data-usersentenceid="@item.UserSentenceId" class="btn btn-select btn-@(!item.UserSentenceId.HasValue ? "outline-primary" : "primary") btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                            <span class="bi bi-@(!item.UserSentenceId.HasValue ? "bookmark-plus" : "bookmark-check")"></span> <span id="gn">@item.GroupName</span>
+                                <td class="col-4 d-flex flex-row-reverse">
+                                    <div class="btn-group dropstart dr">
+                                        <span class="my-auto rounded-start bg-custom3 gn">&nbsp; @item.GroupName &nbsp;</span>
+                                        <button type="button" data-sentenceid="@item.Id" data-usersentenceid="@item.UserSentenceId" class="btn btn-select btn-@(!item.UserSentenceId.HasValue ? "outline-custom1" : "custom1") btn-sm my-4 rounded-pill dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <span class="bi bi-@(!item.UserSentenceId.HasValue ? "plus-lg" : "check-lg")"></span>
                                         </button>
                                         <ul class="dropdown-menu savedropdown" aria-labelledby="dropdownMenuSave">
                                             <li><a href="#" class="dropdown-item create" data-bs-toggle="modal" data-bs-target="#bsModal">Add to new list</a></li>
@@ -92,12 +90,13 @@
                 <table class="table mt-4">
                     <tbody>
                     @{
-                        PagedList.IPagedList<Bilinguals.Domain.Models.Dialog> dialogs = ViewBag.dialogs;
+                        
                         foreach (var item in dialogs)
                         {
                             <tr class="row mx-1">
                                 <td class="row col-8">
-                                    @item.Name
+                                    <span class="entext"><i class="bi bi-chat-square-text-fill me-2"></i>@item.Name</span> 
+                                    <span class="timeupdated">&emsp;<i class="bi bi-clock me-1"></i>Last updated on @(!item.DateModified.HasValue ? null : item.DateModified?.ToString("dd/MM/yyyy"))</span>
                                 </td>
                                 <td class="col-4">
                                     @item.DateModified
@@ -116,9 +115,9 @@
             </div>
 
             @* Tra từ vựng cá nhân *@
-            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+            @*<div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
                 some placeholder content the Home tab's associated content. Clicking another tab will toggle the visibility of this one for
-            </div>
+            </div>*@
         </div>
     </div>
 
