--- a/Bilinguals/Content/css/custom-navbar.css
+++ b/Bilinguals/Content/css/custom-navbar.css
@@ -68,7 +68,7 @@ footer a {
     }
 
 .masthead {
-    background-color: #cfe7ff;
+    background-color: #f1f8ff;
     padding-top: 6.5rem;
     padding-bottom: 2rem;
 }
