--- a/Bilinguals/Views/Home/Index.cshtml
+++ b/Bilinguals/Views/Home/Index.cshtml
@@ -125,7 +125,7 @@
 
     <!-- Modal -->
     <div class="modal fade" id="bsModal" tabindex="-1">
-        <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
             <div class="modal-content"></div>
         </div>
     </div>
