--- a/Bilinguals/Views/Images/Delete.cshtml
+++ b/Bilinguals/Views/Images/Delete.cshtml
@@ -1,49 +1,19 @@
-﻿@model Bilinguals.Domain.Models.Image
-
+﻿
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    var returnUrl = Request.QueryString["returnUrl"];
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Image</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ImagePath)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ImagePath)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateCreated)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DateModified)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateModified)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
+<div class="modal-body">
+    @using (Html.BeginForm("Delete", "Images", FormMethod.Post, new { id = "my-form" }))
+    {
         @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+        <h3>Are you sure you want to delete this?</h3>
     }
 </div>
+
+<div class="modal-footer">
+    <button type="button" class="btn btn-cl btn-secondary" data-bs-dismiss="modal">Close</button>
+    <button type="submit" form="my-form" class="btn btn-custom1">Save</button>
+</div>
+
