--- a/Bilinguals/Views/Images/Edit.cshtml
+++ b/Bilinguals/Views/Images/Edit.cshtml
@@ -1,54 +1,23 @@
-﻿@model Bilinguals.Domain.Models.Image
-
+﻿
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Image</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ImagePath, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ImagePath, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ImagePath, "", new { @class = "text-danger" })
-            </div>
+<div class="modal-body">
+    @using (Html.BeginForm("Edit", "Images", FormMethod.Post, new { enctype = "multipart/form-data", id = "img-form", @class = "needs-validation", novalidate = "novalidate" }))
+    {
+        @Html.AntiForgeryToken()
+        <label>Select file (*.png) @ViewBag.Title </label>
+        <input required="required" class="form-control" type="file" name="ImageFile" value="" style="width: 300px" />
+        <div class="valid-feedback py-2">
+            Looks good!
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DateCreated, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DateCreated, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DateCreated, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DateModified, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DateModified, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DateModified, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    }
 </div>
+
+<div class="modal-footer">
+    <button type="button" class="btn btn-cl btn-secondary" data-bs-dismiss="modal">Close</button>
+    <input type="submit" form="img-form" value="Upload" class="btn btn-primary" />
+</div>
+
+<script src="~/Scripts/Components/bootstrap5-validation.js"></script>
