--- a/Bilinguals/Views/Shared/_Layout.cshtml
+++ b/Bilinguals/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         </div>
                     </li>
                 </ul>
-                @Html.Partial("_LoginPartial")
+                @Html.Action("LoginPartial","Home")
             </div>
         </div>
     </nav>
